--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     }
   },
   "dependencies": {
-    "next": "latest",
+    "@material-ui/core": "^4.11.0",
+    "@types/shopify-buy": "^2.10.3",
+    "next": "^10.0.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "shopify-buy": "^2.11.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
