--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "next": "^10.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "shopify-buy": "^2.11.0"
+    "sass": "^1.29.0",
+    "shopify-buy": "^2.11.0",
+    "swiper": "^6.3.5"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
