--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@types/shopify-buy": "^2.10.3",
     "next": "^10.0.1",
     "react": "^16.12.0",
