--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@types/shopify-buy": "^2.10.3",
     "next": "^10.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "recoil": "^0.1.2",
     "sass": "^1.29.0",
     "shopify-buy": "^2.11.0",
     "swiper": "^6.3.5"
