--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@types/shopify-buy": "^2.10.3",
     "next": "^10.0.1",
+    "next-seo": "^4.17.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "recoil": "^0.1.2",
