--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "next start",
     "type-check": "tsc",
     "lint": "eslint --ext .ts,.tsx",
-    "test": "jest"
+    "test": "jest",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "husky": {
     "hooks": {
@@ -39,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "babel-jest": "^26.6.3",
+    "cypress": "^6.1.0",
     "eslint": "^7.12.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-prettier": "^3.1.4",
